--- a/package.json
+++ b/package.json
@@ -3,12 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.60",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "axios": "^0.21.1",
+    "bootstrap": "^5.1.0",
+    "react-bootstrap": "^2.0.0-beta.5",
+    "react-responsive": "^9.0.0-beta.3",
+    "react-router-dom": "^5.2.0",
+    "react-select": "^4.3.1",
+    "react-star-rating-component": "^1.4.1",
+    "styled-components": "^5.3.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
